# EMRSOP

./: .gitignore  README.md  bootstrap.bat  install.bat  setup.bat  uninstall.bat
agent/: pyproject.toml  requirements.txt
agent/redaction/: engine.py  patterns.py  recognizers.py
agent/screenshots/: _winrt.py  capture.py  ocr.py  redactor.py
agent/service/: config.py  install_service.py  main.py
agent/session/: aggregator.py  exporter.py  workflow_classifier.py
agent/storage/: audit_log.py  db.py  uploader.py
agent/tracker/: emr_detector.py  event_models.py  uia_tracker.py
config/: config.yaml
docs/superpowers/plans/: 2026-05-28-phase1-agent-service.md  2026-05-29-tray-status-ui.md
docs/superpowers/specs/: 2026-05-28-emr-workflow-intelligence-design.md  2026-05-29-tray-status-ui-design.md
tests/: conftest.py
tests/agent/: test_config.py  test_emr_detector.py  test_event_models.py  test_integration.py  test_redaction.py  test_screenshots.py  test_session.py  test_storage.py  test_uia_tracker.py
